@@ -1,3 +1,5 @@
+- Refactor: Remove AnyCurricularCourse rule legacy deprecated slots 
+
 39.0.0 (19-10-2022)
 - Refactor: Remove unused struts actions and related services
 - Refactor: Remove uneessary intermediate class SpaceOccupation
